--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "react-scripts": "2.1.1"
   },
   "dependencies": {
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2",
+    "xstate": "^4.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
