--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "react": "^16.7.0-alpha.2",
     "react-dom": "^16.7.0-alpha.2",
+    "react-router-dom": "^4.3.1",
     "xstate": "^4.2.1"
   },
   "scripts": {
