--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.5"
   },
   "dependencies": {
-    "react": "^16.7.0-alpha.2",
+    "react": "^16.8.3",
     "react-dom": "^16.7.0-alpha.2",
     "react-router-dom": "^4.3.1",
     "xstate": "^4.2.1"
