--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "react-scripts": "2.1.5"
   },
   "dependencies": {
+    "@material-ui/core": "^3.9.2",
     "react": "^16.8.3",
     "react-dom": "^16.7.0-alpha.2",
     "react-router-dom": "^4.3.1",
+    "recharts": "^1.5.0",
     "xstate": "^4.2.1"
   },
   "scripts": {
