--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^3.9.2",
+    "json-server": "^0.14.2",
     "react": "^16.8.3",
     "react-dom": "^16.7.0-alpha.2",
     "react-router-dom": "^4.3.1",
