--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
     "react-dom": "^16.7.0-alpha.2",
     "react-router-dom": "^4.3.1",
     "recharts": "^1.5.0",
-    "xstate": "^4.2.1"
+    "xstate": "^4.3.3"
   },
   "scripts": {
+    "api": "npx json-server db.json --port=3009",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
